# Advanced-Ready-to-Train-AI-Datasets-Maker

./: README.md  dataset.example.yaml  pyproject.toml
docs/: configuration.md  gui.md  overview.md  pipeline.md  scraping.md
src/art_dataset_maker/: __init__.py  _pyinstaller_cli.py  _pyinstaller_gui.py  build_exe.py  chunking.py  cli.py  commands.py  config.py  gui.py  ingestion.py  metadata.py  pipeline.py  preprocess.py  quality.py  scraping.py  stats.py  writer.py
